Add dashboard and NewDemoFrom page

--- a/signup.html
+++ b/signup.html
@@ -42,14 +42,14 @@
 
         <div class="flex gap-12 w-[840px]">
           <div class="flex-1 p-4 flex flex-col gap-4">
-            <header class="flex justify-around">
+            <div class="flex justify-around">
               <a href="signin.html" class="font-medium cursor-pointer">Signin</a
               ><a
                 class="font-medium cursor-pointer bg-orange-300 p-2 px-6 rounded-3xl"
                 href="signup.html"
                 >Signup</a
               >
-            </header>
+              </div>
             <form action="" class="flex flex-col py-8 gap-[20px]">
               <div class="flex flex-col gap-1">
                 <label for="name" class="font-medium text-[#2F2F2F]"
