Addition Of html files for every page of ideaSprint

--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,9 @@
 
     <title>Home</title>
   </head>
-  <body class="">
+  <body class="w-full ">
+
+    
     <header
       class="flex px-8 text-white w-full bg-[#EB6505] font-bold items-center justify-between md:px-10 py-2"
     >
@@ -33,7 +35,7 @@
       >
         <div class="flex-1 flex flex-col h-full">
           <h1
-            class="text-7xl font-inter font-medium tracking-tighter text-white mb-4"
+            class="text-4xl md:text-7xl font-inter font-medium tracking-tighter text-white mb-4"
           >
             Get Your <br />
             Startup demo <br />
@@ -41,14 +43,10 @@
             <span class="text-gray-300 font-normal"><i class="">24-72 Hours</i></span>
           </h1>
           <p class="text-lg text-white mb-8">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis ab quidem eum deserunt cum minus omnis ipsum, dolor
-            delectus! Repellendus a repellat necessitatibus provident inventore
-            labore illum nam nostrum, facere eos voluptatibus beatae eum
-            quibusdam.
+            Transform your startup idea into a clickable demo/MVP. Perfect for pitching investors, user testing, or fundraising. Professional development team ready to bring your vision to life.
           </p>
-          <div class="flex gap-8">
-            <button class="px-12 py-2 bg-white text-[#EB6505] rounded-full">
+          <div class="flex flex-col sm:flex-row gap-4 sm:gap-8">
+            <button class=" px-2 md:px-12 py-2 bg-white text-[#EB6505] rounded-full">
               Start My Demo</button
             ><button
               class="px-12 py-2 text-white nbg-[#EB6505] border border-white rounded-full"
@@ -58,15 +56,15 @@
           </div>
           <div class="flex flex-col text-white gap-2 pt-12">
             <div class="flex items-center gap-2">
-              <img src="assets/Vector.png" alt="" class="w-4 h-4" />
+              <img src="assets/Vector.png" alt="" class="w-4 h-3" />
               <p>24-72 Hous delivery</p>
             </div>
             <div class="flex items-center gap-2">
-              <img src="assets/Vector.png" alt="" class="w-4 h-4" />
+              <img src="assets/Vector.png" alt="" class="w-4 h-3" />
               <p>Professional Quality</p>
             </div>
             <div class="flex items-center gap-2">
-              <img src="assets/Vector.png" alt="" class="w-4 h-4" />
+              <img src="assets/Vector.png" alt="" class="w-4 h-3" />
               <p>Money Back Guarantee</p>
             </div>
           </div>
@@ -102,21 +100,21 @@
         </div>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <div class="flex flex-col items-start justify-center">
+        <div class=" flex flex-col items-start justify-center">
           <img src="assets/image 3.png" alt="" class="w-12 h-12" />
           <div class="text-[#EB6505]">Step1</div>
-          <div class="text-xl font-medium">Git an idea?</div>
+          <div class="text-xl font-medium text-[#2F2F2F] tracking-tighter">Got an idea?</div>
         </div>
         <div class="flex flex-col items-start justify-center">
           <img src="assets/image1.png" alt="" class="w-12 h-12" />
           <div class="text-[#EB6505]">Step2</div>
-          <div class="text-xl font-medium">Share Your Vision</div>
+          <div class="text-xl font-medium text-[#2F2F2F] tracking-tighter">Share Your Vision</div>
         </div>
         <div class="flex flex-col items-start justify-center">
           <img src="assets/image2.png" alt="" class="w-12 h-12" />
           <div class="text-[#EB6505]">Step3</div>
-          <div class="text-xl font-medium">
-            We turn it into clickble proototype
+          <div class="text-xl font-medium text-[#2F2F2F] tracking-tighter">
+            We turn it into clickable  prototype
           </div>
         </div>
       </div>
@@ -125,7 +123,7 @@
       <div
         class="bg-white md:h-screen flex flex-col-reverse py-4 md:flex-row-reverse gap-4 items-center justify-center px-8"
       >
-        <div class="flex-1 flex flex-col h-full px-16 py-8">
+        <div class="flex-1 flex flex-col h-full  px-4 md:px-16 py-8">
           <div class="">
             <h1 class="text-3xl text-[#2F2F2F] font-inter font-medium tracking-tight ">How It works</h1>
             <p class="text-[#585858] text-sm font-normal tracking-tight ">Lorem ipsum dolor sit amet consectetur.</p>
@@ -451,24 +449,23 @@
         </div>
       </div>
     </main>
-    <main class="px-8 py-4 flex flex-col justify-center items-center gap-8">
+    <main class="px-8 py-4 sm:py-18 flex flex-col justify-center items-center gap-8">
       <div class="py-4 text-center">
-        <h1 class="text-4xl tracking-tighter font-inter mb-4">
-          What people say
+        <h1 class="text-4xl tracking-tighter font-inter font-medium text-[#2F2F2F] mb-4">
+          What Founders say
         </h1>
-        <p class="text-gray-600">Lorem ipsum dolor sit amet consectetur.</p>
+        <p class="text-gray-600">Success stories from startup founders  <br>who got their demos built</p>
 
-        <p class="text-gray-600">sit amet consectetur.</p>
+        
       </div>
 
       <div
-        class="grid grid-col-1 sm:grid-cols-2 md:grid-cols-3 justify-center items-center gap-8 sm:gap-16 px-12"
+        class="grid grid-col-1 sm:grid-cols-2 md:grid-cols-3 justify-center items-center gap-8 sm:gap-16  px-4 sm:px-12 "
       >
         <div class="flex flex-col gap-6">
-          <p class="text-center font-medium tracking-tight">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio,
-            minus.Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Optio, minus dolor
+          <p class="text-center font-medium tracking-tight flex ">
+           <img src="assets/colon.png" alt="" class="h-6 w-6 ">
+            IdeaSprint delivered our MVP demo in 48 hours. The quality was outstanding and helped us secure our seed round of $500K. Highly recommended!
           </p>
           <div class="flex justify-center items-center gap-2">
             <img
@@ -477,16 +474,15 @@
               class="w-12 h-12 rounded-full object-cover"
             />
             <div class="flex flex-col">
-              <p class="font-medium">Pucchi lal</p>
-              <p class="font-normal text-gray-300">Ceo ,Mark</p>
+              <p class="font-medium">Sarah Chen </p>
+              <p class="font-normal text-gray-300">Founder,EcoTrack</p>
             </div>
           </div>
         </div>
-        <div class="flex flex-col gap-6">
-          <p class="text-center font-medium tracking-tight">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio,
-            minus dolor Lorem ipsum dolor sit amet consectetur, adipisicing
-            elit. Optio, minus dolor
+        <div class="flex flex-col gap-6 relative ">
+          <p class="text-center font-medium tracking-tight flex ">
+           <img src="assets/colon.png" alt="" class="h-6 w-6 ">
+            The demo was so polished that investors thought we had a working product. It perfectly captured our vision and saved us months of development time.
           </p>
           <div class="flex justify-center items-center gap-2">
             <img
@@ -495,16 +491,15 @@
               class="w-12 h-12 rounded-full object-cover"
             />
             <div class="flex flex-col">
-              <p class="font-medium">Pucchi lal</p>
-              <p class="font-normal text-gray-300">Ceo ,Mark</p>
+              <p class="font-medium">Marcus Rodriguez</p>
+              <p class="font-normal text-gray-300">Ceo ,FinaceFlow</p>
             </div>
           </div>
         </div>
         <div class="flex flex-col gap-6">
-          <p class="text-center font-medium tracking-tight">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio,
-            minus.Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Optio, minus dolor
+         <p class="text-center font-medium tracking-tight flex ">
+           <img src="assets/colon.png" alt="" class="h-6 w-6  ">
+            Amazing attention to detail and fast turnaround. The demo helped us validate our idea with early users before committing to full development.
           </p>
           <div class="flex justify-center items-center gap-2">
             <img
@@ -513,8 +508,8 @@
               class="w-12 h-12 rounded-full object-cover"
             />
             <div class="flex flex-col">
-              <p class="font-medium">Pucchi lal</p>
-              <p class="font-normal text-gray-300">Ceo ,Mark</p>
+              <p class="font-medium">Amanda Foster</p>
+              <p class="font-normal text-gray-300">Ceo ,healthTech</p>
             </div>
           </div>
         </div>
@@ -523,16 +518,20 @@
     <main class="px-8 py-8 flex flex-col md:flex-row justify-cente= bg-[#F5F5F5] items-start  gap-8">
       <div class="flex-1 flex flex-col gap-4">
         <p class="font-inter font-medium text-6xl tracking-tighter text-[#2F2F2F] ">
-          Frequently Asked Question
+          Frequently <br> Asked Question
         </p>
-        <p class="font-inter font-medium text-xl tracking-tighter "></p>
-          Everything you need to know about our demo building service
+        <p class="font-base tracking-tighter text-md text-[#585858]">
+          Everything you need to know   about <br> our demo building service
         </p>
       </div>
-      <div class="flex-1 flex flex-col  gap-2">
+      <div class="flex-2 flex flex-col  gap-2">
 <div class="bg-white rounded-3xl md:p-4 flex flex-col gap-2 hover:text-orange-500 p-4">
     <p class="font-inter font-bold text-md  tracking-tight text-[#2F2F2F]">How quickly can you deliver my demo?</p>
-    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor Pack orders get priority delivery in 24-48 hours, while Basic plans are delivered within 72 hours.</p>
+    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor Pack orders get priority delivery in 24-48 hours,</p>
+</div>
+<div class="bg-white rounded-3xl md:p-4 flex flex-col gap-2 hover:text-orange-500 p-4">
+    <p class="font-inter font-bold text-md  tracking-tight text-[#2F2F2F]">How quickly can you deliver my demo?</p>
+    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor  while Basic plans are delivered within 72 hours.</p>
 </div>
 <div class="bg-white rounded-3xl md:p-4 flex flex-col gap-2 hover:text-orange-500 p-4">
     <p class="font-inter font-bold text-md  tracking-tight text-[#2F2F2F]">How quickly can you deliver my demo?</p>
@@ -540,11 +539,7 @@
 </div>
 <div class="bg-white rounded-3xl md:p-4 flex flex-col gap-2 hover:text-orange-500 p-4">
     <p class="font-inter font-bold text-md  tracking-tight text-[#2F2F2F]">How quickly can you deliver my demo?</p>
-    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor Pack orders get priority delivery in 24-48 hours, while Basic plans are delivered within 72 hours.</p>
-</div>
-<div class="bg-white rounded-3xl md:p-4 flex flex-col gap-2 hover:text-orange-500 p-4">
-    <p class="font-inter font-bold text-md  tracking-tight text-[#2F2F2F]">How quickly can you deliver my demo?</p>
-    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor Pack orders get priority delivery in 24-48 hours, while Basic plans are delivered within 72 hours.</p>
+    <p>Our turnaround time ranges from 24-72 hours depending on your selected plan. Premium and Investor Pack orders get priority delivery  72 hours.</p>
 </div>
       </div>
     </main>
